# gnome-todo

./: .gitignore  configure.ac
plugins/: Makefile.am
plugins/online-accounts/: Makefile.am  online-accounts.plugin.in
plugins/online-accounts/online-accounts/: __init__.py  account-row.ui  accounts.py  authentication.py  preferences_panel.ui  providers.py
